--- a/WB_Joint_Ownership/app/src/main/res/layout-land/activity_main.xml
+++ b/WB_Joint_Ownership/app/src/main/res/layout-land/activity_main.xml
@@ -13,18 +13,51 @@
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_weight="1"
 		android:orientation="horizontal">
+
+		<ImageButton
+			android:id="@+id/main_memu_bt"
+			android:layout_width="40dp"
+			android:layout_height="40dp"
+			android:src="@android:drawable/ic_dialog_dialer"/>
+
+		<LinearLayout
+			android:id="@+id/wh_paret"
+			android:layout_width="wrap_content"
+			android:layout_height="match_parent"
+			android:orientation="horizontal">
+
+			<ImageButton
+				android:id="@+id/main_edit_bt"
+				android:layout_width="40dp"
+				android:layout_height="40dp"
+				android:src="@android:drawable/ic_menu_edit"/>
+
+			<ImageButton
+				android:id="@+id/main_all_clear_bt"
+				android:layout_width="40dp"
+				android:layout_height="40dp"
+				android:layout_weight="1"
+				android:src="@android:drawable/ic_menu_delete"/>
+
+			<ImageButton
+				android:id="@+id/test_bt1"
+				android:layout_width="40dp"
+				android:layout_height="40dp"
+				android:layout_weight="1"
+				android:src="@android:drawable/ic_input_get"/>
+
+		</LinearLayout>
 
 		<Button
 			android:id="@+id/connect_bt"
 			android:layout_width="wrap_content"
-			android:layout_height="42dp"
+			android:layout_height="40dp"
 			android:text="@string/call_bt_caption2conect"/>
 
 		<LinearLayout
 			android:layout_width="wrap_content"
-			android:layout_height="match_parent"
+			android:layout_height="wrap_content"
 			android:layout_weight="1"
 			android:orientation="vertical">
 
@@ -37,7 +70,7 @@
 
 			<LinearLayout
 				android:layout_width="match_parent"
-				android:layout_height="match_parent"
+				android:layout_height="wrap_content"
 				android:orientation="horizontal">
 
 				<TextView
@@ -64,10 +97,10 @@
 		</LinearLayout>
 
 		<!--<ImageButton-->
-			<!--android:id="@+id/switchCameraAction"-->
-			<!--android:layout_width="40dp"-->
-			<!--android:layout_height="40dp"-->
-			<!--android:src="@android:drawable/ic_menu_rotate"/>-->
+		<!--android:id="@+id/switchCameraAction"-->
+		<!--android:layout_width="40dp"-->
+		<!--android:layout_height="40dp"-->
+		<!--android:src="@android:drawable/ic_menu_rotate"/>-->
 
 		<ImageButton
 			android:id="@+id/main_camera_bt"
@@ -75,6 +108,19 @@
 			android:layout_height="40dp"
 			android:src="@android:drawable/ic_menu_camera"/>
 
+
+		<ImageButton
+			android:id="@+id/main_setting_bt"
+			android:layout_width="40dp"
+			android:layout_height="40dp"
+			android:src="@android:drawable/ic_menu_manage"/>
+
+		<ImageButton
+			android:id="@+id/main_quit_bt"
+			android:layout_width="40dp"
+			android:layout_height="40dp"
+			android:layout_gravity="fill_vertical|fill_horizontal|center"
+			android:src="@android:drawable/ic_lock_power_off"/>
 	</LinearLayout>
 
 	<LinearLayout
@@ -90,16 +136,16 @@
 		<view
 			android:id="@+id/svRemoteView"
 			class="io.skyway.Peer.Browser.Canvas"
-			android:layout_width="378dp"
+			android:layout_width="386dp"
 			android:layout_height="match_parent"
 			android:layout_gravity="top|left"
-			android:layout_margin="2dp"
-			/>
+			android:gravity="top|left"/>
 		<!--app:layout_editor_absoluteX="0dp"-->
 		<!--tools:layout_editor_absoluteX="0dp"-->
 		<!--tools:layout_editor_absoluteY="3dp"-->
 
 		<LinearLayout
+			android:id="@+id/main_subview_ll"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
 			android:orientation="vertical">
@@ -107,19 +153,17 @@
 			<view
 				android:id="@+id/svLocalView"
 				class="io.skyway.Peer.Browser.Canvas"
-				android:layout_width="match_parent"
+				android:layout_width="192dp"
 				android:layout_height="108dp"
-				android:layout_gravity="top|right|end"
-				android:layout_weight="1"
-				/>
+				android:layout_gravity="top|right"
+				android:gravity="top|left"/>
 			<!--tools:layout_editor_absoluteX="390dp"-->
 			<!--tools:layout_editor_absoluteY="5dp"-->
 			<com.hijiyama_koubou.wb_joint_ownership.CS_CanvasView
 				android:id="@+id/main_whitebord"
 				android:layout_width="match_parent"
-				android:layout_height="108dp"
-				android:layout_weight="1"
-				/>
+				android:layout_height="match_parent"
+				android:layout_gravity="top|right"/>
 			<!--app:layout_constraintEnd_toEndOf="parent"-->
 			<!--tools:layout_editor_absoluteY="122dp"-->
 		</LinearLayout>
@@ -128,12 +172,6 @@
 
 	</LinearLayout>
 
-	<include
-		layout="@layout/activity_bottom_bar"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_gravity="bottom|center_horizontal|end"
-		android:layout_weight="1"/>
 </LinearLayout>
 
 
