--- a/WB_Joint_Ownership/app/src/main/res/layout/vchat_tisement.xml
+++ b/WB_Joint_Ownership/app/src/main/res/layout/vchat_tisement.xml
@@ -29,12 +29,11 @@
 		<!--android:layout_height="40dp"-->
 		<!--android:src="@android:drawable/ic_menu_edit"/>-->
 
-		<!--<ImageButton-->
-		<!--android:id="@+id/main_all_clear_bt"-->
-		<!--android:layout_width="40dp"-->
-		<!--android:layout_height="40dp"-->
-		<!--android:layout_weight="1"-->
-		<!--android:src="@android:drawable/ic_menu_delete"/>-->
+		<ImageButton
+			android:id="@+id/main_all_clear2_bt"
+			android:layout_width="40dp"
+			android:layout_height="40dp"
+			android:src="@android:drawable/ic_menu_delete"/>
 
 		<!--<ImageButton-->
 		<!--android:id="@+id/test_bt1"-->
@@ -57,6 +56,38 @@
 			android:layout_weight="1"
 			android:orientation="vertical">
 
+			<TextView
+				android:id="@+id/conect_situation_tv"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_marginLeft="5dp"
+				android:text="@string/now_conection_meg"/>
+
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:orientation="horizontal">
+
+				<TextView
+					android:id="@+id/tvPartnerId"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_weight="1"
+					android:text="@string/partner_id_titol"/>
+
+				<TextView
+					android:id="@+id/tvOwnId"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_marginRight="5dp"
+					android:layout_weight="1"
+					android:text="@string/my_id_titol"
+					android:textAlignment="viewEnd"
+					app:layout_constraintBottom_toTopOf="@+id/svRemoteView"
+					app:layout_constraintLeft_toLeftOf="parent"
+					app:layout_constraintRight_toLeftOf="@+id/btnAction"
+					app:layout_constraintTop_toTopOf="parent"/>
+			</LinearLayout>
 		</LinearLayout>
 
 		<!--<ImageButton-->
@@ -89,13 +120,20 @@
 				android:layout_height="40dp"
 				android:layout_gravity="fill_vertical|fill_horizontal|center"
 				android:src="@android:drawable/ic_lock_power_off"/>
+
+			<ImageButton
+				android:id="@+id/main_c2edit_bt"
+				android:layout_width="40dp"
+				android:layout_height="40dp"
+				android:src="@android:drawable/ic_menu_edit"/>
+
 		</LinearLayout>
 
 		<ImageButton
 			android:id="@+id/vf_next_bt"
 			android:layout_width="60dp"
 			android:layout_height="36dp"
-			android:layout_marginLeft="40dp"
+			android:layout_marginLeft="10dp"
 			android:maxWidth="60dp"
 			android:src="@android:drawable/ic_media_ff"/>
 
@@ -115,8 +153,8 @@
 		<view
 			android:id="@+id/svRemoteView"
 			class="io.skyway.Peer.Browser.Canvas"
-			android:layout_width="390dp"
-			android:layout_height="219dp"
+			android:layout_width="312dp"
+			android:layout_height="match_parent"
 			android:layout_gravity="top|left"
 			android:layout_marginRight="2dp"
 			android:gravity="top|left"/>
@@ -124,56 +162,14 @@
 		<!--tools:layout_editor_absoluteX="0dp"-->
 		<!--tools:layout_editor_absoluteY="3dp"-->
 
-		<LinearLayout
-			android:id="@+id/main_subview_ll"
-			android:layout_width="match_parent"
+		<view
+			android:id="@+id/svLocalView"
+			class="io.skyway.Peer.Browser.Canvas"
+			android:layout_width="192dp"
 			android:layout_height="match_parent"
-			android:orientation="vertical">
-
-			<TextView
-				android:id="@+id/tvOwnId"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginRight="5dp"
-				android:text="@string/my_id_titol"
-				android:textAlignment="viewEnd"
-				app:layout_constraintBottom_toTopOf="@+id/svRemoteView"
-				app:layout_constraintLeft_toLeftOf="parent"
-				app:layout_constraintRight_toLeftOf="@+id/btnAction"
-				app:layout_constraintTop_toTopOf="parent"/>
-
-			<view
-				android:id="@+id/svLocalView"
-				class="io.skyway.Peer.Browser.Canvas"
-				android:layout_width="192dp"
-				android:layout_height="108dp"
-				android:layout_gravity="top|right"
-				android:gravity="top|left"/>
-
-			<TextView
-				android:id="@+id/conect_situation_tv"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginLeft="5dp"
-				android:text="@string/now_conection_meg"/>
-
-			<TextView
-				android:id="@+id/tvPartnerId"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:text="@string/partner_id_titol"
-				/>
-
-			<!--tools:layout_editor_absoluteX="390dp"-->
-			<!--tools:layout_editor_absoluteY="5dp"-->
-			<!--<com.hijiyama_koubou.wb_joint_ownership.CS_CanvasView-->
-			<!--android:id="@+id/main_whitebord"-->
-			<!--android:layout_width="192dp"-->
-			<!--android:layout_height="108dp"-->
-			<!--android:layout_gravity="top|right"/>-->
-			<!--app:layout_constraintEnd_toEndOf="parent"-->
-			<!--tools:layout_editor_absoluteY="122dp"-->
-		</LinearLayout>
+			android:layout_gravity="top|right"
+			android:layout_weight="1"
+			android:gravity="top|left"/>
 
 		<!--</android.support.constraint.ConstraintLayout>-->
 
