--- a/WB_Joint_Ownership/app/src/main/res/layout/wb_tisement.xml
+++ b/WB_Joint_Ownership/app/src/main/res/layout/wb_tisement.xml
@@ -43,7 +43,7 @@
 
 	<view
 		android:id="@+id/main_whitebord"
-		class="io.skyway.Peer.Browser.Canvas"
+		class="com.hijiyama_koubou.wb_joint_ownership.CS_CanvasView"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_weight="1"/>
