--- a/WB_Joint_Ownership/app/src/main/res/layout/vchat_tisement.xml
+++ b/WB_Joint_Ownership/app/src/main/res/layout/vchat_tisement.xml
@@ -29,12 +29,6 @@
 		<!--android:layout_height="40dp"-->
 		<!--android:src="@android:drawable/ic_menu_edit"/>-->
 
-		<ImageButton
-			android:id="@+id/main_all_clear2_bt"
-			android:layout_width="40dp"
-			android:layout_height="40dp"
-			android:src="@android:drawable/ic_menu_delete"/>
-
 		<!--<ImageButton-->
 		<!--android:id="@+id/test_bt1"-->
 		<!--android:layout_width="40dp"-->
@@ -44,63 +38,56 @@
 
 		<!--</LinearLayout>-->
 
-		<Button
-			android:id="@+id/connect_bt"
-			android:layout_width="wrap_content"
-			android:layout_height="40dp"
-			android:text="@string/call_bt_caption2conect"/>
-
 		<LinearLayout
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
+			android:id="@+id/main_conect_ll"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
 			android:layout_weight="1"
-			android:orientation="vertical">
+			android:orientation="horizontal">
 
-			<TextView
-				android:id="@+id/conect_situation_tv"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginLeft="5dp"
-				android:text="@string/now_conection_meg"/>
+			<Button
+				android:id="@+id/connect_bt"
+				android:layout_width="wrap_content"
+				android:layout_height="40dp"
+				android:text="@string/call_bt_caption2conect"/>
 
 			<LinearLayout
-				android:layout_width="match_parent"
+				android:layout_width="wrap_content"
 				android:layout_height="match_parent"
-				android:orientation="horizontal">
+				android:layout_weight="1"
+				android:orientation="vertical">
 
 				<TextView
-					android:id="@+id/tvPartnerId"
+					android:id="@+id/conect_situation_tv"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:layout_weight="1"
-					android:text="@string/partner_id_titol"/>
+					android:layout_marginLeft="5dp"
+					android:text="@string/now_conection_meg"/>
 
-				<TextView
-					android:id="@+id/tvOwnId"
+				<LinearLayout
 					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:layout_marginRight="5dp"
-					android:layout_weight="1"
-					android:text="@string/my_id_titol"
-					android:textAlignment="viewEnd"
-					app:layout_constraintBottom_toTopOf="@+id/svRemoteView"
-					app:layout_constraintLeft_toLeftOf="parent"
-					app:layout_constraintRight_toLeftOf="@+id/btnAction"
-					app:layout_constraintTop_toTopOf="parent"/>
+					android:layout_height="match_parent"
+					android:orientation="horizontal">
+
+					<TextView
+						android:id="@+id/tvPartnerId"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:text="@string/partner_id_titol"/>
+
+					<TextView
+						android:id="@+id/tvOwnId"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:layout_marginRight="5dp"
+						android:text="@string/my_id_titol"
+						android:textAlignment="viewEnd"
+						app:layout_constraintBottom_toTopOf="@+id/svRemoteView"
+						app:layout_constraintLeft_toLeftOf="parent"
+						app:layout_constraintRight_toLeftOf="@+id/btnAction"
+						app:layout_constraintTop_toTopOf="parent"/>
+				</LinearLayout>
 			</LinearLayout>
-		</LinearLayout>
-
-		<!--<ImageButton-->
-		<!--android:id="@+id/switchCameraAction"-->
-		<!--android:layout_width="40dp"-->
-		<!--android:layout_height="40dp"-->
-		<!--android:src="@android:drawable/ic_menu_rotate"/>-->
-
-
-		<LinearLayout
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:orientation="horizontal">
 
 			<ImageButton
 				android:id="@+id/main_setting_bt"
@@ -108,17 +95,12 @@
 				android:layout_height="40dp"
 				android:src="@android:drawable/ic_menu_manage"/>
 
-			<!--<ImageButton-->
-			<!--android:id="@+id/main_camera_bt"-->
-			<!--android:layout_width="40dp"-->
-			<!--android:layout_height="40dp"-->
-			<!--android:src="@android:drawable/ic_menu_camera"/>-->
-
 			<ImageButton
 				android:id="@+id/main_quit_bt"
 				android:layout_width="40dp"
 				android:layout_height="40dp"
 				android:layout_gravity="fill_vertical|fill_horizontal|center"
+				android:layout_marginRight="20dp"
 				android:src="@android:drawable/ic_lock_power_off"/>
 
 			<ImageButton
@@ -129,11 +111,45 @@
 
 		</LinearLayout>
 
+		<!--<ImageButton-->
+		<!--android:id="@+id/switchCameraAction"-->
+		<!--android:layout_width="40dp"-->
+		<!--android:layout_height="40dp"-->
+		<!--android:src="@android:drawable/ic_menu_rotate"/>-->
+
+
+		<LinearLayout
+			android:id="@+id/main_wb_tools_ll"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_gravity="right|end"
+			android:orientation="horizontal">
+
+			<!--<ImageButton-->
+			<!--android:id="@+id/main_camera_bt"-->
+			<!--android:layout_width="40dp"-->
+			<!--android:layout_height="40dp"-->
+			<!--android:src="@android:drawable/ic_menu_camera"/>-->
+
+			<ImageButton
+				android:id="@+id/main_all_clear2_bt"
+				android:layout_width="40dp"
+				android:layout_height="40dp"
+				android:src="@android:drawable/ic_menu_delete"/>
+
+			<ImageButton
+				android:id="@+id/main_back2video_bt"
+				android:layout_width="40dp"
+				android:layout_height="40dp"
+				android:layout_marginLeft="20dp"
+				android:src="@android:drawable/presence_video_online"/>
+		</LinearLayout>
+
 		<ImageButton
 			android:id="@+id/vf_next_bt"
 			android:layout_width="60dp"
 			android:layout_height="36dp"
-			android:layout_marginLeft="10dp"
+			android:layout_gravity="right|end"
 			android:maxWidth="60dp"
 			android:src="@android:drawable/ic_media_ff"/>
 
