--- a/WB_Joint_Ownership/app/src/main/res/layout/vchat_tisement.xml
+++ b/WB_Joint_Ownership/app/src/main/res/layout/vchat_tisement.xml
@@ -158,7 +158,7 @@
 	<LinearLayout
 		android:id="@+id/main_views_ll"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
+		android:layout_height="match_parent"
 		android:layout_weight="1"
 		android:orientation="horizontal">
 
@@ -179,14 +179,45 @@
 		<!--tools:layout_editor_absoluteX="0dp"-->
 		<!--tools:layout_editor_absoluteY="3dp"-->
 
+		<!--<LinearLayout-->
+		<!--android:layout_width="match_parent"-->
+		<!--android:layout_height="match_parent"-->
+		<!--android:layout_weight="2"-->
+		<!--android:orientation="vertical">-->
+
 		<view
 			android:id="@+id/svLocalView"
 			class="io.skyway.Peer.Browser.Canvas"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
 			android:layout_gravity="top|right"
-			android:layout_weight="1"
-			android:gravity="top|left"/>
+			android:gravity="top|right"/>
+		<!--android:layout_weight="1" を外して全画面へ広げる-->
+		<!--<view-->
+		<!--android:id="@+id/main_whitebord2"-->
+		<!--class="com.hijiyama_koubou.wb_joint_ownership.CS_CanvasView"-->
+		<!--android:layout_width="match_parent"-->
+		<!--android:layout_height="match_parent"-->
+		<!--android:layout_weight="1"-->
+		<!--/>-->
+		<!--class="com.hijiyama_koubou.wb_joint_ownership.CS_CanvasView"-->
+		<!--class="io.skyway.Peer.Browser.Canvas"-->
+		<!--<FrameLayout-->
+		<!--android:id="@+id/white_bord_bace_fl"-->
+		<!--android:layout_width="match_parent"-->
+		<!--android:layout_height="match_parent"-->
+		<!--android:layout_marginLeft="20dp"-->
+		<!--android:layout_marginTop="300dp"-->
+		<!--android:layout_weight="1"-->
+		<!--android:background="@color/colorAccent">-->
+
+		<!--<org.webrtc.SurfaceViewRenderer-->
+		<!--android:id="@+id/white_bord_svr"-->
+		<!--android:layout_width="match_parent"-->
+		<!--android:layout_height="match_parent"-->
+		<!--/>-->
+		<!--</FrameLayout>-->
+		<!--</LinearLayout>-->
 
 		<!--</android.support.constraint.ConstraintLayout>-->
 
