--- a/WB_Joint_Ownership/app/src/main/res/layout-land/wb_tisement.xml
+++ b/WB_Joint_Ownership/app/src/main/res/layout-land/wb_tisement.xml
@@ -46,7 +46,8 @@
 		class="com.hijiyama_koubou.wb_joint_ownership.CS_CanvasView"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_weight="1"/>
+		android:layout_weight="1"
+		android:background="@android:color/background_light"/>
 	<!--class="com.hijiyama_koubou.wb_joint_ownership.CS_CanvasView"-->
 	<!--class="io.skyway.Peer.Browser.Canvas"-->
 
