--- a/WB_Joint_Ownership/app/src/main/res/layout/vchat_tisement.xml
+++ b/WB_Joint_Ownership/app/src/main/res/layout/vchat_tisement.xml
@@ -89,19 +89,19 @@
 				</LinearLayout>
 			</LinearLayout>
 
-			<ImageButton
-				android:id="@+id/main_setting_bt"
-				android:layout_width="40dp"
-				android:layout_height="40dp"
-				android:src="@android:drawable/ic_menu_manage"/>
+			<!--<ImageButton-->
+				<!--android:id="@+id/main_setting_bt"-->
+				<!--android:layout_width="40dp"-->
+				<!--android:layout_height="40dp"-->
+				<!--android:src="@android:drawable/ic_menu_manage"/>-->
 
-			<ImageButton
-				android:id="@+id/main_quit_bt"
-				android:layout_width="40dp"
-				android:layout_height="40dp"
-				android:layout_gravity="fill_vertical|fill_horizontal|center"
-				android:layout_marginRight="20dp"
-				android:src="@android:drawable/ic_lock_power_off"/>
+			<!--<ImageButton-->
+				<!--android:id="@+id/main_quit_bt"-->
+				<!--android:layout_width="40dp"-->
+				<!--android:layout_height="40dp"-->
+				<!--android:layout_gravity="fill_vertical|fill_horizontal|center"-->
+				<!--android:layout_marginRight="20dp"-->
+				<!--android:src="@android:drawable/ic_lock_power_off"/>-->
 
 			<ImageButton
 				android:id="@+id/main_c2edit_bt"
